Add support response type

--- a/cognito/tiny-device-flow/cdk.json.example
+++ b/cognito/tiny-device-flow/cdk.json.example
@@ -16,7 +16,9 @@
     "dev": {
       "region": "us-west-2",
       "domain": "YOUR_COGNITO_USER_POOL_DOMAIN_PREFIX",
-      "userPool": "YOUR_COGNITO_USER_POOL_NAME"
+      "userPool": "YOUR_COGNITO_USER_POOL_NAME",
+      "responseType": "CODE_OR_TOKEN",
+      "identityProvider": "YOUR_COGNITO_IDENTITY_PROVIDER_NAME"
     }
   }
 }
