--- a/cognito/tiny-device-flow/package.json
+++ b/cognito/tiny-device-flow/package.json
@@ -17,7 +17,6 @@
     "@types/aws-lambda": "^8.10.85",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
-    "@types/node-fetch": "^3.0.3",
     "@types/randombytes": "^2.0.0",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -50,7 +49,7 @@
     "@aws-sdk/client-s3": "^3.41.0",
     "@aws-sdk/util-dynamodb": "^3.41.0",
     "aws-lambda": "^1.0.7",
-    "node-fetch": "^3.1.0",
+    "cross-fetch": "^3.1.4",
     "randombytes": "^2.1.0",
     "source-map-support": "^0.5.20",
     "uuid": "^8.3.2"
