--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.34",
     "cross-fetch": "^3.1.4",
     "next": "^12.0.3",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.2.19"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.51",
     "@swc/core": "^1.2.108",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "autoprefixer": "^10.4.0",
