--- a/cognito/tiny-device-flow/tsconfig.json
+++ b/cognito/tiny-device-flow/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
-  "target": "ES2019",
+  "target": "ES2020",
   "module": "commonjs",
-  "lib": ["es2019", "DOM"],
+  "lib": [
+    "es2020",
+    "DOM"
+  ],
+  "moduleResolution": "node",
   "declaration": true,
   "esModuleInterop":true,
   "strict": true,
