--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
 
 permissions:
-  actions: read
+  actions: write
   checks: write
-  contents: none
+  contents: write
   deployments: none
   issues: none
   packages: none
