Move from es-examples

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,6 +33,50 @@ updates:
       - poad
 
   - package-ecosystem: npm
+    directory: '/cognito/cognito-aws-console-example/app/'
+    schedule:
+      interval: daily
+      timezone: Asia/Tokyo
+    allow:
+      - dependency-type: all
+    rebase-strategy: auto
+    assignees:
+      - poad
+
+  - package-ecosystem: npm
+    directory: '/cognito/cognito-aws-console-example/infra/'
+    schedule:
+      interval: daily
+      timezone: Asia/Tokyo
+    allow:
+      - dependency-type: all
+    rebase-strategy: auto
+    assignees:
+      - poad
+
+  - package-ecosystem: npm
+    directory: '/cognito/cognito-s3-example/'
+    schedule:
+      interval: daily
+      timezone: Asia/Tokyo
+    allow:
+      - dependency-type: all
+    rebase-strategy: auto
+    assignees:
+      - poad
+
+  - package-ecosystem: npm
+    directory: '/cognito/cognito-s3-example/infra/'
+    schedule:
+      interval: daily
+      timezone: Asia/Tokyo
+    allow:
+      - dependency-type: all
+    rebase-strategy: auto
+    assignees:
+      - poad
+
+  - package-ecosystem: npm
     directory: '/cognito/cognito-saml-next-js/webapp/'
     schedule:
       interval: daily
