--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,30 @@ jobs:
         yarn: true
         path: ${{github.workspace}}/cognito/cognito-admin/infra/
 
+    - name: update (cognito/cognito-aws-console-example/app)
+      uses: poad/update-node-modules@v1.0.5
+      with:
+        yarn: true
+        path: ${{github.workspace}}/cognito/cognito-aws-console-example/app/
+
+    - name: update (cognito/cognito-aws-console-example/infra)
+      uses: poad/update-node-modules@v1.0.5
+      with:
+        yarn: true
+        path: ${{github.workspace}}/cognito/cognito-aws-console-example/infra/
+
+    - name: update (cognito/cognito-s3-example)
+      uses: poad/update-node-modules@v1.0.5
+      with:
+        yarn: true
+        path: ${{github.workspace}}/cognito/cognito-s3-example/
+
+    - name: update (cognito/ccognito-s3-example/infra)
+      uses: poad/update-node-modules@v1.0.5
+      with:
+        yarn: true
+        path: ${{github.workspace}}/cognito/cognito-s3-example/infra/
+
     - name: update (cognito/cognito-saml-next-js/webapp)
       uses: poad/update-node-modules@v1.0.5
       with:
