--- a/cognito/cognito-saml-next-js/webapp/package.json
+++ b/cognito/cognito-saml-next-js/webapp/package.json
@@ -25,8 +25,6 @@
     "@types/react": "^17.0.34",
     "aws-amplify": "^4.3.6",
     "next": "^12.0.3",
-    "node-fetch": "^3.1.0",
-    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
@@ -34,12 +32,10 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
-    "@types/node-fetch": "^3.0.3",
-    "@types/qs": "^6.9.7",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-config-import": "^0.13.0",
