--- a/cognito/cognito-saml-next-js/webapp/package.json
+++ b/cognito/cognito-saml-next-js/webapp/package.json
@@ -26,13 +26,11 @@
     "aws-amplify": "^4.3.6",
     "next": "^12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
-    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.2.0",
