Fix the amplify ui react

--- a/cognito/cognito-aws-console-example/app/package.json
+++ b/cognito/cognito-aws-console-example/app/package.json
@@ -41,7 +41,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
