--- a/cognito/cognito-admin/app/package.json
+++ b/cognito/cognito-admin/app/package.json
@@ -42,7 +42,7 @@
     "@swc/core": "^1.2.110",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
