--- a/cognito/cognito-s3-example/package.json
+++ b/cognito/cognito-s3-example/package.json
@@ -11,34 +11,32 @@
     "all": "yarn lint --fix && yarn build"
   },
   "dependencies": {
-    "@aws-amplify/storage": "^4.4.8",
-    "@aws-amplify/ui-components": "^1.9.5",
-    "@aws-amplify/ui-react": "^1.2.25",
+    "@aws-amplify/storage": "^4.4.9",
+    "@aws-amplify/ui-components": "^1.9.6",
+    "@aws-amplify/ui-react": "^2.0.0",
     "@emotion/cache": "^11.6.0",
     "@emotion/react": "^11.6.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
-    "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.1.1",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "amazon-cognito-identity-js": "^5.2.3",
-    "aws-amplify": "^4.3.7",
-    "aws-amplify-react": "^5.1.8",
+    "aws-amplify": "^4.3.8",
+    "aws-amplify-react": "^5.1.9",
     "next": "^12.0.4",
+    "next-global-css": "^1.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.51",
     "@swc/core": "^1.2.110",
-    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
