--- a/cognito/cognito-aws-console-example/app/package.json
+++ b/cognito/cognito-aws-console-example/app/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@aws-amplify/core": "^4.3.8",
-    "@aws-amplify/ui-components": "^1.9.5",
-    "@aws-amplify/ui-react": "^1.2.25",
+    "@aws-amplify/ui-components": "^1.9.6",
+    "@aws-amplify/ui-react": "^2.0.0",
     "@aws-sdk/client-cognito-identity": "^3.41.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.41.0",
     "@aws-sdk/client-sts": "^3.41.0",
@@ -41,7 +41,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
