--- a/cognito/cognito-admin/infra/cdk.json.example
+++ b/cognito/cognito-admin/infra/cdk.json.example
@@ -11,6 +11,17 @@
     "@aws-cdk/aws-s3:grantWriteWithoutAcl": true,
     "@aws-cdk/aws-ecs-patterns:removeDefaultDesiredCount": true,
     "@aws-cdk/aws-rds:lowercaseDbIdentifier": true,
-    "@aws-cdk/aws-efs:defaultEncryptionAtRest": true
+    "@aws-cdk/aws-efs:defaultEncryptionAtRest": true,
+    "dev": {
+      "region": "us-west-2",
+      "domain": "YOUR_COGNITO_USER_POOL_DOMAIN_FOR_ADMIN",
+      "endUserDomain": "YOUR_COGNITO_USER_POOL_DOMAIN_FOR_END_USERS",
+      "adminUserPool": "YOUR_COGNITO_USER_POOL_NAME_FOR_ADMIN",
+      "endUserPool": "YOUR_COGNITO_USER_POOL_NAME_FOR_END_USER",
+      "providers": "AdminPool",
+      "groupRoleClassificationTagName": "Type",
+      "groupRoleClassificationTagValue": "group",
+      "testRoles": 2
+    }
   }
 }
