--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -24,12 +24,12 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.51",
-    "@swc/core": "^1.2.111",
+    "@swc/core": "^1.2.112",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8.3.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
@@ -44,7 +44,7 @@
     "jest": "^27.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.0",
     "prettier": "^2.4.1",
     "swc-loader": "^0.1.15",
     "ts-jest": "^27.0.7",
