--- a/cognito/cognito-admin/app/package.json
+++ b/cognito/cognito-admin/app/package.json
@@ -39,9 +39,9 @@
   "devDependencies": {
     "@swc/cli": "^0.1.52",
     "@swc/core": "^1.2.114",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "<5.0.0",
+    "@typescript-eslint/parser": "<5.0.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
