--- a/cognito/cognito-saml-next-js/webapp/package.json
+++ b/cognito/cognito-saml-next-js/webapp/package.json
@@ -30,9 +30,9 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "<5.0.0",
+    "@typescript-eslint/parser": "<5.0.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
