--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -26,10 +26,10 @@
     "@swc/cli": "^0.1.52",
     "@swc/core": "^1.2.114",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "<5.0.0",
+    "@typescript-eslint/parser": "<5.0.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8.3.0",
+    "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-import": "^0.13.0",
