--- a/cognito/cognito-aws-console-example/infra/tsconfig.json
+++ b/cognito/cognito-aws-console-example/infra/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "commonjs",
-    "lib": ["es2018"],
+    "lib": [
+      "DOM",
+      "es2018"
+    ],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
