--- a/cognito/cognito-admin/infra/tsconfig.json
+++ b/cognito/cognito-admin/infra/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "commonjs",
-    "lib": ["es2019"],
+    "lib": [
+      "DOM",
+      "es2019"
+    ],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
