--- a/lambda/container/hello-rust-lambda/tsconfig.json
+++ b/lambda/container/hello-rust-lambda/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "commonjs",
-    "lib": ["es2018"],
+    "lib": [
+      "DOM",
+      "es2018"
+    ],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
