--- a/cognito/cognito-aws-console-example/app/package.json
+++ b/cognito/cognito-aws-console-example/app/package.json
@@ -35,12 +35,12 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.52",
-    "@swc/core": "^1.2.114",
+    "@swc/core": "^1.2.115",
     "@typescript-eslint/eslint-plugin": "<5.0.0",
     "@typescript-eslint/parser": "<5.0.0",
     "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-next": "^12.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -55,6 +55,6 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "swc-loader": "^0.1.15",
-    "typescript": "^4.5.2"
+    "typescript": "<4.5.0"
   }
 }
