--- a/cognito/cognito-s3-example/package.json
+++ b/cognito/cognito-s3-example/package.json
@@ -33,12 +33,12 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.52",
-    "@swc/core": "^1.2.114",
+    "@swc/core": "^1.2.115",
     "@typescript-eslint/eslint-plugin": "<5.0.0",
     "@typescript-eslint/parser": "<5.0.0",
     "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-next": "^12.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -53,6 +53,6 @@
     "next-transpile-modules": "^9.0.0",
     "swc-loader": "^0.1.15",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "typescript": "<4.5.0"
   }
 }
