--- a/cognito/cognito-saml-next-js/webapp/package.json
+++ b/cognito/cognito-saml-next-js/webapp/package.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/parser": "<5.0.0",
     "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-next": "^12.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -47,6 +47,6 @@
     "jest": "^27.4.2",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "<4.5.0"
   }
 }
