--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -24,14 +24,14 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.52",
-    "@swc/core": "^1.2.114",
+    "@swc/core": "^1.2.115",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "<5.0.0",
     "@typescript-eslint/parser": "<5.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "<8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
     "eslint-config-next": "^12.0.4",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -48,6 +48,6 @@
     "prettier": "^2.5.0",
     "swc-loader": "^0.1.15",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "typescript": "<4.5.0"
   }
 }
