Migrate to AWS CDK 2.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           ./lambda/cognito-lambda,
           ./lambda/container/simple,
           ./lambda/container/hello-rust-lambda,
-          ./lambda/python,
+          # ./lambda/python,
           ./cognito/tiny-device-flow,
           ./cognito/tiny-device-flow/pages,
           ./cognito/cognito-saml-next-js/webapp,
