--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,11 +135,11 @@ jobs:
         yarn: true
         path: ${{github.workspace}}/lambda/container/simple/lambda/
 
-    - name: update (lambda/python)
-      uses: poad/update-node-modules@v1.0.5
-      with:
-        yarn: true
-        path: ${{github.workspace}}/lambda/python/
+    # - name: update (lambda/python)
+    #   uses: poad/update-node-modules@v1.0.5
+    #   with:
+    #     yarn: true
+    #     path: ${{github.workspace}}/lambda/python/
 
     - name: Commit files
       run: |
