--- a/lambda/cognito-console/cdk.json.example
+++ b/lambda/cognito-console/cdk.json.example
@@ -1,5 +1,5 @@
 {
-  "app": "npx ts-node --prefer-ts-exts bin/cognito-lambda.ts",
+  "app": "npx ts-node --prefer-ts-exts bin/cognito-console.ts",
   "watch": {
     "include": [
       "**"
@@ -24,9 +24,21 @@
     "@aws-cdk/aws-cloudfront:defaultSecurityPolicyTLSv1.2_2021": true,
     "dev": {
       "region": "us-west-2",
-      "domain": "dev-poad-s3-lambda",
-      "s3Region": "us-west-2",
-      "s3Bucket": "cognito-lambda",
+      "domain": "YOUR_COGNITO_USER_POOL_DOMAIN",
+      "auth0Domain": "YOUR_AUTH0_DOMAIN_PREFIX_WITH_REGION",
+      "providers": "Auth0,Azure",
+      "triggers": {
+        "preSignUp": true,
+        "preAuth": false,
+        "postAuth": true,
+        "defAuthChallenge": false,
+        "createAuthChallenge": false,
+        "verifyAuthChallenge": false,
+        "postConfirm": false,
+        "preGenToken": false,
+        "customMessge": false,
+        "userMigrate": false
+      },
       "groups": [
         {
           "id": "Sub1",
