--- a/lambda/cognito-console/package.json
+++ b/lambda/cognito-console/package.json
@@ -13,7 +13,6 @@
     "lint": "eslint --ext .ts signin-lambda"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.134.0",
     "@types/aws-lambda": "^8.10.85",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
@@ -31,19 +30,14 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.134.0",
-    "@aws-cdk/aws-apigatewayv2": "^1.134.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.134.0",
-    "@aws-cdk/aws-cognito": "^1.134.0",
-    "@aws-cdk/aws-iam": "^1.134.0",
-    "@aws-cdk/aws-lambda": "^1.134.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.134.0",
-    "@aws-cdk/aws-logs": "^1.134.0",
-    "@aws-cdk/core": "^1.134.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.0.0-alpha.11",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.0.0-alpha.11",
     "@aws-sdk/client-cognito-identity": "^3.43.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.43.0",
     "@aws-sdk/client-sts": "^3.43.0",
+    "aws-cdk-lib": "^2.0.0",
     "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.9",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.1.0",
     "source-map-support": "^0.5.21"
