--- a/lambda/python/package.json
+++ b/lambda/python/package.json
@@ -12,22 +12,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.134.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
-    "aws-cdk": "^1.134.0",
+    "aws-cdk": "^2.0.0",
     "jest": "^27.4.3",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-events": "^1.134.0",
-    "@aws-cdk/aws-events-targets": "^1.134.0",
-    "@aws-cdk/aws-iam": "^1.134.0",
-    "@aws-cdk/aws-lambda": "^1.134.0",
-    "@aws-cdk/aws-lambda-python": "^1.134.0",
-    "@aws-cdk/core": "^1.134.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.0.0-alpha.11",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.9",
     "source-map-support": "^0.5.21"
   }
 }
