--- a/codebuild/custom-image-test/android/app/build.gradle
+++ b/codebuild/custom-image-test/android/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 android {
     compileSdkVersion 31
+    buildToolsVersion = "30.0.3"
 
     defaultConfig {
         applicationId "com.github.poad.test.android11sample"
