--- a/cognito/cognito-admin/app/package.json
+++ b/cognito/cognito-admin/app/package.json
@@ -30,20 +30,20 @@
     "amazon-cognito-identity-js": "^5.2.3",
     "aws-amplify": "^4.3.10",
     "cross-fetch": "^3.1.4",
-    "next": "^12.0.4",
+    "next": "^12.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
     "react-loader": "^2.4.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "<5.0.0",
-    "@typescript-eslint/parser": "<5.0.0",
-    "eslint": "<8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.0.5",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -53,6 +53,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "typescript": "<4.6.0"
+    "typescript": "^4.5.2"
   }
 }
