--- a/cognito/cognito-aws-console-example/app/package.json
+++ b/cognito/cognito-aws-console-example/app/package.json
@@ -29,18 +29,18 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "aws-amplify": "^4.3.10",
-    "next": "^12.0.4",
+    "next": "^12.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "<5.0.0",
-    "@typescript-eslint/parser": "<5.0.0",
-    "eslint": "<8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.0.5",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -52,6 +52,6 @@
     "jsonwebtoken": "^8.5.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "typescript": "<4.6.0"
+    "typescript": "^4.5.2"
   }
 }
