--- a/cognito/cognito-s3-example/package.json
+++ b/cognito/cognito-s3-example/package.json
@@ -26,19 +26,19 @@
     "amazon-cognito-identity-js": "^5.2.3",
     "aws-amplify": "^4.3.10",
     "aws-amplify-react": "^5.1.9",
-    "next": "^12.0.4",
+    "next": "^12.0.5",
     "next-global-css": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "<5.0.0",
-    "@typescript-eslint/parser": "<5.0.0",
-    "eslint": "<8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.0.5",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -51,6 +51,6 @@
     "next-transpile-modules": "^9.0.0",
     "swc-loader": "^0.1.15",
     "ts-jest": "^27.0.7",
-    "typescript": "<4.6.0"
+    "typescript": "^4.5.2"
   }
 }
