--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -16,7 +16,7 @@
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "cross-fetch": "^3.1.4",
-    "next": "^12.0.4",
+    "next": "^12.0.5",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,14 +24,14 @@
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "<5.0.0",
-    "@typescript-eslint/parser": "<5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "<8.0.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-import": "^0.13.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint-config-next": "^12.0.5",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
@@ -45,6 +45,6 @@
     "postcss": "^8.4.4",
     "prettier": "^2.5.0",
     "ts-jest": "^27.0.7",
-    "typescript": "<4.6.0"
+    "typescript": "^4.5.2"
   }
 }
