--- a/cognito/cognito-aws-console-example/app/package.json
+++ b/cognito/cognito-aws-console-example/app/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-sts": "^3.45.0",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
