Add the Cognito Console lambda

--- a/cognito/cognito-admin/infra/cdk.json.example
+++ b/cognito/cognito-admin/infra/cdk.json.example
@@ -28,7 +28,7 @@
       "endUserDomain": "YOUR_COGNITO_USER_POOL_DOMAIN_FOR_END_USERS",
       "adminUserPool": "YOUR_COGNITO_USER_POOL_NAME_FOR_ADMIN",
       "endUserPool": "YOUR_COGNITO_USER_POOL_NAME_FOR_END_USER",
-      "providers": "AdminPool",
+      "provider": "AdminPool",
       "groupRoleClassificationTagName": "Type",
       "groupRoleClassificationTagValue": "group",
       "testRoles": 2
