--- a/cognito/cognito-admin/infra/package.json
+++ b/cognito/cognito-admin/infra/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.8",
+    "@types/node-fetch": "^3.0.3",
     "aws-cdk": "^2.4.0",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.2",
@@ -23,11 +24,16 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.4.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.4.0-alpha.0",
+    "@aws-sdk/client-cognito-identity": "^3.45.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.45.0",
+    "@aws-sdk/client-sts": "^3.45.0",
     "aws-cdk-lib": "^2.4.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.27",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^3.1.0",
     "source-map-support": "^0.5.21"
   }
 }
