--- a/cognito/cognito-admin/app/package.json
+++ b/cognito/cognito-admin/app/package.json
@@ -14,9 +14,9 @@
     "@aws-amplify/core": "^4.3.12",
     "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-react": "^2.1.9",
-    "@aws-sdk/client-cognito-identity-provider": "^3.47.1",
-    "@aws-sdk/client-iam": "^3.47.1",
-    "@aws-sdk/client-sts": "^3.47.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.48.0",
+    "@aws-sdk/client-iam": "^3.48.0",
+    "@aws-sdk/client-sts": "^3.48.0",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
@@ -33,7 +33,7 @@
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.24.2",
+    "react-hook-form": "^7.25.0",
     "react-loader": "^2.4.7"
   },
   "devDependencies": {
@@ -55,5 +55,8 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "node-fetch": "2.6.7"
   }
 }
