--- a/cognito/cognito-saml-next-js/webapp/package.json
+++ b/cognito/cognito-saml-next-js/webapp/package.json
@@ -49,5 +49,8 @@
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "node-fetch": "2.6.7"
   }
 }
