--- a/cognito/tiny-device-flow/pages/package.json
+++ b/cognito/tiny-device-flow/pages/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.38",
-    "cross-fetch": "^3.1.4",
+    "cross-fetch": "^3.1.5",
     "next": "^12.0.8",
     "qs": "^6.10.3",
     "react": "^17.0.2",
@@ -46,5 +46,8 @@
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "node-fetch": "2.6.7"
   }
 }
